force-app/main/default/objects/Co_Branding_Request__c/Co_Branding_Request__c.object-meta.xml
<CustomObject>
    <label>Co Branding Request</label>
    <nameField>
        <displayFormat>CB-{0000}</displayFormat>
        <label>Co Branding Request No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Co Branding Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>