force-app/main/default/objects/Co_Branding_Request__c/fields/Audience_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Audience_Next_Step__c</fullName>
    <label>Specific action audience to take next?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>