force-app/main/default/objects/Co_Branding_Request__c/fields/Buyer_Journey__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Journey__c</fullName>
    <label>Where are they in the buyer journey?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>