force-app/main/default/objects/Co_Branding_Request__c/fields/Channel_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Channel_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Co_Branding_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>