force-app/main/default/objects/Co_Branding_Request__c/fields/Final_deliverable__c.field-meta.xml
<CustomField>
    <fullName>Final_deliverable__c</fullName>
    <label>What is your final deliverable?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>