force-app/main/default/objects/Co_Branding_Request__c/fields/Other_Instruction_for_Designers__c.field-meta.xml
<CustomField>
    <fullName>Other_Instruction_for_Designers__c</fullName>
    <label>Other Instruction for Designers.</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>