force-app/main/default/objects/Co_Branding_Request__c/fields/Other_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Other_Requirements__c</fullName>
    <label>Any requirements we should be aware of?</label>
    <type>TextArea</type>
</CustomField>