force-app/main/default/objects/Co_Branding_Request__c/fields/Specs_and_File_format_for_final_document__c.field-meta.xml
<CustomField>
    <fullName>Specs_and_File_format_for_final_document__c</fullName>
    <label>Specs and File format for final document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>