force-app/main/default/objects/Co_Branding_Request__c/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <label>Who is the target audience?</label>
    <type>TextArea</type>
</CustomField>