force-app/main/default/objects/Co_Branding_Request__c/validationRules/Description_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Description__c )</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>Please fill the Description of the Request.</errorMessage>
</ValidationRule>