force-app/main/default/objects/Co_Branding_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Industry__c</columns>
    <columns>Priority__c</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>